--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1{
 .Orange-color{
     color: orange;
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 150px;
 }
@@ -36,4 +36,32 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-item{
+    width: 40%;
+    margin-right: 5%;
+    margin-left: 5%;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow:10px 10px 40px gray;
+    border-left: 10px solid;
+
+}
+#web-developer{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+#fullstack{
+    border-left: 7px solid;
+    border-image: linear-gradient(red, cyan);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
